--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -20,6 +20,8 @@
   padding: 16px 32px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  @media screen and (max-width: 480px) {
+  }
   &:hover,
   &:focus {
     fill: var(--accent);
@@ -27,6 +29,9 @@
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+
+.clients__logo-item {
 }
 
 .clients__list {
