--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -1,3 +1,21 @@
+.staff__list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+
+  @media screen and (max-width: 480px) {
+    width: 450px;
+    margin-bottom: 30px;
+  }
+}
+
+.staff__img {
+  width: 270px;
+  @media screen and (max-width: 480px) {
+    width: 450px;
+  }
+}
+
 .staff__title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -6,12 +24,6 @@
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
-}
-
-.staff__list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
 }
 
 .staff__item-title {
@@ -37,7 +49,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (max-width: 480px) {
+    margin-bottom: 30px;
+  }
 }
+
 .staff__item:nth-child(4n) {
   margin-right: 0;
 }
@@ -51,4 +68,8 @@
 
 .section.team {
   background-color: var(--secondary-background-color);
+  @media screen and (max-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 10px;
+  }
 }
