--- a/sass/layout/_we-do.scss
+++ b/sass/layout/_we-do.scss
@@ -1,3 +1,15 @@
+.section-work {
+  @media screen and(max-width: 480px) {
+    padding-bottom: 30px;
+    padding-top: 30px;
+  }
+}
+.work {
+  @media screen and(max-width: 480px) {
+    display: none;
+  }
+}
+
 .work__title {
   color: var(--title-text-color);
   font-weight: 700;
