--- a/css/main.css
+++ b/css/main.css
@@ -1497,10 +1497,10 @@ textarea {
 @media screen and (min-width: 768px) {
   .staff__item {
     width: 354px;
-    margin-right: 30px;
-  }
-  .staff__item:nth-child(even) {
     margin-right: 0px;
+  }
+  .staff__item:nth-child(1), .staff__item:nth-child(3) {
+    margin-right: 30px;
   }
 }
 
@@ -1509,8 +1509,8 @@ textarea {
     width: 270px;
     margin-right: 30px;
   }
-  .staff__item:nth-child(n) {
-    margin-right: 30px;
+  .staff__item:last-child {
+    margin-right: 0px;
   }
 }
 
