--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -69,16 +69,18 @@
 
   @media screen and (min-width: 768px) {
     width: 354px;
-    margin-right: 30px;
-    &:nth-child(even) {
-      margin-right: 0px;
+    margin-right: 0px;
+    &:nth-child(1),
+    &:nth-child(3) {
+      margin-right: 30px;
     }
   }
+
   @media screen and (min-width: 1200px) {
     width: 270px;
     margin-right: 30px;
-    &:nth-child(n) {
-      margin-right: 30px;
+    &:last-child {
+      margin-right: 0px;
     }
   }
 }
