--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -9,7 +9,11 @@
 }
 
 .footer__address {
-  width: 231px;
-  height: 81px;
-  margin-right: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  // width: 231px;
+  // height: 81px;
+  // margin-right: 70px;
 }
