--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ textarea {
 }
 
 .container {
+  min-width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -120,27 +121,17 @@ textarea {
   text-decoration: none;
 }
 
-@media screen and (min-width: 767px) {
-  .logo {
-    margin-right: 88px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .logo {
-    margin-right: 93px;
-    font-size: 26px;
-    line-height: 1.2;
-  }
-}
-
 .footer__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-family: raleway;
-  display: inline-block;
-  margin-right: 93px;
   color: var(--title-text-color);
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.15;
   letter-spacing: 0.03em;
   text-decoration: none;
 }
@@ -632,12 +623,33 @@ textarea {
 }
 
 .footer__address {
-  width: 231px;
-  height: 81px;
-  margin-right: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.social-title {
+.conection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+}
+
+.conection__title {
   font-family: roboto;
   font-weight: 700;
   font-size: 14px;
@@ -655,7 +667,7 @@ textarea {
           align-items: center;
 }
 
-.social-menu {
+.conection__menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -664,7 +676,7 @@ textarea {
           justify-content: center;
 }
 
-.social-link {
+.conection__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -683,23 +695,22 @@ textarea {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-item {
-  margin-right: 10px;
-}
-
-.social-item:last-child {
-  margin-right: 0px;
-}
-
-.social-logo {
-  fill: var(--primary-background-color);
-}
-
-.social-link:hover,
-.social-link:focus {
+.conection__link:hover, .conection__link:focus {
   background-color: var(--accent);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.conection__item {
+  margin-right: 10px;
+}
+
+.conection__item:last-child {
+  margin-right: 0px;
+}
+
+.conection__logo {
+  fill: var(--primary-background-color);
 }
 
 .container.footer {
@@ -709,6 +720,15 @@ textarea {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+}
+
+.social-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .link-staff {
@@ -731,8 +751,7 @@ textarea {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-staff:hover,
-.link-staff:focus {
+.link-staff:hover, .link-staff:focus {
   background-color: var(--accent);
   border-radius: 50%;
   fill: white;
@@ -754,9 +773,17 @@ textarea {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe {
-  margin-left: 93px;
-  width: 570px;
+.subscribe__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .subscribe-title {
@@ -797,16 +824,9 @@ textarea {
   border-radius: 4px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-left: 12px;
-}
-
-.subscribe-block {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
 }
 
 .subscribe-btn::after {
@@ -833,7 +853,7 @@ textarea {
   border-radius: 4px;
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 359px;
+  width: 450px;
   padding-left: 16px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1416,7 +1436,7 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .staff__list {
-    width: 100%;
+    width: 768px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1537,11 +1557,6 @@ textarea {
 .section.team {
   background-color: var(--secondary-background-color);
   padding-top: 60px;
-  padding-bottom: 10px;
-}
-
-.clients {
-  width: 480px;
 }
 
 .clients__title {
@@ -1551,23 +1566,34 @@ textarea {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 .clients__logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
+  max-width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  margin-right: 30px;
   fill: var(--clients-border);
   cursor: pointer;
   padding: 16px 32px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .clients__logo {
+    max-width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__logo {
+    max-width: 170px;
+  }
 }
 
 .clients__logo:hover, .clients__logo:focus {
@@ -1577,45 +1603,82 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 480px) {
-  .clients__logo {
-    width: 210px;
-    margin: 15px;
-  }
-}
-
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   list-style: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 768px) {
   .clients__list {
-    width: 480px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
-.clients__item:nth-child(6) {
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.clients__item {
+  margin: 15px 15px 15px 15px;
+}
+
+.clients__item:nth-child(odd) {
+  margin-left: 0px;
+}
+
+.clients__item:nth-child(even) {
   margin-right: 0px;
 }
 
-.footer {
+@media screen and (min-width: 768px) {
+  .clients__item {
+    margin: 0px 0px 0px 0px;
+  }
+  .clients__item:nth-child(3n) {
+    margin: 15px 0px 15px 15px;
+  }
+  .clients__item:nth-child(1), .clients__item:nth-child(4) {
+    margin: 15px 15px 15px 0px;
+  }
+  .clients__item:nth-child(2), .clients__item:nth-child(5) {
+    margin: 15px 15px 15px 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item:nth-child(3), .clients__item:nth-child(4) {
+    margin: 15px 15px 15px 15px;
+  }
+}
+
+.footer-main {
+  min-width: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background-color: var(--footer-background-color);
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer {
+  max-width: 450px;
 }
 
 .footer__link {
@@ -1626,7 +1689,7 @@ textarea {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-top: 9px;
+  margin-top: 8px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1639,12 +1702,13 @@ textarea {
 }
 
 .footer__item {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .footer__list {
   list-style-type: none;
-  margin-top: 9px;
+  margin-top: 8px;
+  margin-bottom: 60px;
 }
 
 .portfolio-list {
