--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,23 +15,27 @@
   line-height: 1.15;
   letter-spacing: 0.03em;
   text-decoration: none;
-  @media screen and (min-width: 767px) {
-    margin-right: 88px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-right: 93px;
-    font-size: 26px;
-    line-height: 1.2;
-  }
+  // @media screen and (min-width: 767px) {
+  //   margin-right: 88px;
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   margin-right: 93px;
+  //   font-size: 26px;
+  //   line-height: 1.2;
+  // }
 }
 
 .footer__logo {
+  display: flex;
+  justify-content: center;
   font-family: raleway;
-  display: inline-block;
-  margin-right: 93px;
+  // display: inline-block;
+  // margin-right: 93px;
   color: var(--title-text-color);
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.15;
+  // font-size: 26px;
+  // line-height: 1.2;
   letter-spacing: 0.03em;
   text-decoration: none;
 }
