--- a/sass/components/_social-footer.scss
+++ b/sass/components/_social-footer.scss
@@ -1,4 +1,11 @@
-.social-title {
+.conection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.conection__title {
   font-family: roboto;
   font-weight: 700;
   font-size: 14px;
@@ -13,11 +20,11 @@
   align-items: center;
 }
 
-.social-menu {
+.conection__menu {
   display: flex;
   justify-content: center;
 }
-.social-link {
+.conection__link {
   display: flex;
   padding: 0;
   width: 44px;
@@ -28,24 +35,22 @@
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.social-item {
+.conection__item {
   margin-right: 10px;
+  &:last-child {
+    margin-right: 0px;
+  }
 }
 
-.social-item:last-child {
-  margin-right: 0px;
-}
-
-.social-logo {
+.conection__logo {
   fill: var(--primary-background-color);
-}
-
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container.footer {
