--- a/sass/components/_social-staff.scss
+++ b/sass/components/_social-staff.scss
@@ -1,3 +1,7 @@
+.social-menu {
+  display: flex;
+  justify-content: center;
+}
 .link-staff {
   padding: 0;
   width: 44px;
@@ -10,23 +14,22 @@
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.link-staff:hover,
-.link-staff:focus {
-  background-color: var(--accent);
-  border-radius: 50%;
-  fill: white;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-staff:hover .social-staff,
-.link-staff:focus .social-staff {
-  background-color: var(--accent);
-  fill: white;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent);
+    border-radius: 50%;
+    fill: white;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &:hover .social-staff,
+  &:focus .social-staff {
+    background-color: var(--accent);
+    fill: white;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .social-staff {
