--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,7 +1,14 @@
-.subscribe {
-  margin-left: 93px;
-  width: 570px;
+.subscribe__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+// .subscribe-block {
+//   // display: block;
+//   // display: inline-flex;
+//   // align-items: center;
+// }
 
 .subscribe-title {
   font-family: roboto;
@@ -34,12 +41,10 @@
   border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-left: 12px;
-}
-
-.subscribe-block {
-  display: inline-flex;
-  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  // margin-left: 12px;
 }
 
 .subscribe-btn::after {
@@ -60,7 +65,8 @@
   border-radius: 4px;
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 359px;
+  width: 450px;
+  // width: 359px;
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
