--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,7 +1,3 @@
-.clients {
-  width: 480px;
-}
-
 .clients__title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -9,20 +5,29 @@
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
+  // margin-bottom: 50px;
 }
 
 .clients__logo {
   display: flex;
-  width: 170px;
+  max-width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  margin-right: 30px;
+  // margin-right: 30px;
   fill: var(--clients-border);
   cursor: pointer;
   padding: 16px 32px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    max-width: 226px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 170px;
+  }
 
   &:hover,
   &:focus {
@@ -31,25 +36,59 @@
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  @media screen and(max-width: 480px) {
-    width: 210px;
-    margin: 15px;
-  }
 }
 
 .clients__list {
   display: flex;
   list-style: none;
+  justify-content: center;
+  flex-wrap: wrap;
 
-  @media screen and(max-width: 480px) {
-    width: 480px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
-.clients__item:nth-child(6) {
-  margin-right: 0px;
+.clients__item {
+  margin: 15px 15px 15px 15px;
+  &:nth-child(odd) {
+    margin-left: 0px;
+  }
+  &:nth-child(even) {
+    margin-right: 0px;
+  }
+  @media screen and (min-width: 768px) {
+    margin: 0px 0px 0px 0px;
+
+    &:nth-child(3n) {
+      margin: 15px 0px 15px 15px;
+    }
+    &:nth-child(1),
+    &:nth-child(4) {
+      margin: 15px 15px 15px 0px;
+    }
+    &:nth-child(2),
+    &:nth-child(5) {
+      margin: 15px 15px 15px 15px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:nth-child(3),
+    &:nth-child(4) {
+      margin: 15px 15px 15px 15px;
+    }
+  }
 }
