--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,11 +1,21 @@
-.footer {
+.footer-main {
+  min-width: 480px;
   display: flex;
   background-color: var(--footer-background-color);
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.container.footer {
+.footer {
+  // display: flex;
+  // flex-direction: column;
+  // flex-wrap: nowrap;
+  // align-content: center;
+  // justify-content: center;
+  // align-items: center;
+  // margin-left: auto;
+  // margin-right: auto;
+  max-width: 450px;
 }
 
 .footer__link {
@@ -16,7 +26,8 @@
   line-height: 1.71px;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-top: 9px;
+  // margin-top: 9px;
+  margin-top: 8px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
@@ -28,10 +39,13 @@
 }
 
 .footer__item {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+  // margin-bottom: 9px;
 }
 
 .footer__list {
   list-style-type: none;
-  margin-top: 9px;
+  // margin-top: 9px;
+  margin-top: 8px;
+  margin-bottom: 60px;
 }
