--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -8,10 +8,12 @@
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
-    width: 100%;
+    width: 768px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    //   margin-left: auto;
+    // margin-right: auto;
   }
   @media screen and (min-width: 1200px) {
     width: 100%;
@@ -102,7 +104,7 @@
 .section.team {
   background-color: var(--secondary-background-color);
   padding-top: 60px;
-  padding-bottom: 10px;
+
   @media screen and (min-width: 768px) {
   }
 }
