--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -44,7 +44,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  // margin-left: 12px;
+  @media screen and (width: 1200px) {
+    margin-left: 12px;
+  }
 }
 
 .subscribe-btn::after {
@@ -66,9 +68,12 @@
   padding-top: 15px;
   padding-bottom: 15px;
   width: 450px;
-  // width: 359px;
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  @media screen and (width: 1200px) {
+    width: 358px;
+  }
 }
 
 .subscribe input::placeholder {
