--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,20 @@ textarea {
   text-decoration: none;
 }
 
+@media screen and (min-width: 767px) {
+  .logo {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.2;
+  }
+}
+
 .footer__logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -134,6 +148,15 @@ textarea {
   line-height: 1.15;
   letter-spacing: 0.03em;
   text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    display: inline-block;
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 
 .contacts {
@@ -635,6 +658,16 @@ textarea {
           align-items: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    width: 231px;
+    height: 81px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .conection {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -647,6 +680,14 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .conection {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .conection__title {
@@ -786,6 +827,29 @@ textarea {
           align-items: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+.subscribe-block {
+  display: block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-block {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
+
 .subscribe-title {
   font-family: roboto;
   font-weight: 700;
@@ -829,9 +893,10 @@ textarea {
   margin-top: 20px;
 }
 
-@media screen and (width: 1200px) {
+@media screen and (min-width: 1200px) {
   .subscribe-btn {
     margin-left: 12px;
+    margin-top: 0px;
   }
 }
 
@@ -865,7 +930,7 @@ textarea {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (width: 1200px) {
+@media screen and (min-width: 1200px) {
   .subscribe input {
     width: 358px;
   }
@@ -1715,7 +1780,13 @@ textarea {
 }
 
 .footer {
-  max-width: 450px;
+  min-width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    min-width: auto;
+  }
 }
 
 .footer__link {
