--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -13,7 +13,10 @@
   flex-direction: column;
   align-items: center;
 
-  // width: 231px;
-  // height: 81px;
-  // margin-right: 70px;
+  @media screen and (min-width: 1200px) {
+    width: 231px;
+    height: 81px;
+    // margin-right: 70px;
+    align-items: baseline;
+  }
 }
