--- a/sass/components/_social-footer.scss
+++ b/sass/components/_social-footer.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    align-items: baseline;
+  }
 }
 
 .conection__title {
