--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -2,13 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media screen and (min-width: 1200px) {
+    align-items: baseline;
+  }
 }
 
-// .subscribe-block {
-//   // display: block;
-//   // display: inline-flex;
-//   // align-items: center;
-// }
+.subscribe-block {
+  display: block;
+
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+  }
+}
 
 .subscribe-title {
   font-family: roboto;
@@ -44,8 +51,10 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  @media screen and (width: 1200px) {
+
+  @media screen and (min-width: 1200px) {
     margin-left: 12px;
+    margin-top: 0px;
   }
 }
 
@@ -71,7 +80,7 @@
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  @media screen and (width: 1200px) {
+  @media screen and (min-width: 1200px) {
     width: 358px;
   }
 }
