--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -30,7 +30,10 @@
   // align-items: center;
   // margin-left: auto;
   // margin-right: auto;
-  max-width: 450px;
+  min-width: 450px;
+  @media screen and (min-width: 768px) {
+    min-width: auto;
+  }
 }
 
 .footer__link {
