--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,18 +1,40 @@
-.filter {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  margin-bottom: 50px;
+.filter__list {
+  margin-bottom: 40px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: flex-start;
+    list-style-type: none;
+    max-width: 479px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 
-.filter .item {
+.filter__item {
   margin-right: 8px;
+  margin-top: 15px;
 }
-.filter .item:last-child {
+.filter__:last-child {
   margin-right: 0px;
 }
 
-.filter-button {
+.filter__button {
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
   font-family: Roboto;
@@ -27,21 +49,21 @@
   border-radius: 4px;
   transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--primary-background-color);
+    background-color: var(--accent);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.item .filter-button {
-}
+// .item .filter-button {
+// }
 
-.filter-button:hover,
-.filter-button:focus {
-  color: var(--primary-background-color);
-  background-color: var(--accent);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.filter .current {
+.filter__button.current {
   color: var(--primary-background-color);
   background-color: var(--accent);
   font-family: Roboto;
