--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -15,13 +15,16 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    min-width: 768px;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @media screen and (min-width: 1200px) {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    max-width: 1200px;
   }
 }
 
