--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,7 +16,7 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
     display: flex;
-
+    justify-content: space-between;
     align-items: baseline;
   }
 }
