--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,12 +10,14 @@
 }
 
 .portfolio-list .item {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 .portfolio-list .item:hover .portfolio-card-description {
@@ -73,4 +75,5 @@
   border-left: 0.5px solid var(--border-color);
   border-bottom: 0.5px solid var(--border-color);
   padding: 20px 24px 20px 24px;
+  width: 370px;
 }
