--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -1,22 +1,24 @@
 .staff__list {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  @media screen and (max-width: 767px) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
-  list-style-type: none;
-  width: 450px;
-  margin-bottom: 30px;
+    list-style-type: none;
+    max-width: 450px;
+    margin-bottom: 30px;
+  }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 768px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    //   margin-left: auto;
-    // margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: 1200px) {
-    width: 100%;
+    width: 1200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -24,13 +26,16 @@
 }
 
 .staff__img {
-  width: 450px;
-  @media screen and (min-width: 768px) {
-    width: 354px;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199) {
+    width: 100%;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 270px;
+    width: 100%;
   }
 }
 
