--- a/css/main.css
+++ b/css/main.css
@@ -1877,11 +1877,22 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   list-style-type: none;
   cursor: pointer;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .portfolio-list {
+    width: 768px;
+  }
 }
 
 .portfolio-list .item {
@@ -1889,13 +1900,23 @@ textarea {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 30px;
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list .item {
+    width: calc((100% - 60px) / 2);
+    margin-right: 30px;
+    max-width: 354px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .portfolio-list .item {
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
-    margin-bottom: 30px;
+    max-width: 370px;
   }
 }
 
@@ -1937,12 +1958,16 @@ textarea {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
-.portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .portfolio-list .title {
@@ -1959,6 +1984,17 @@ textarea {
   border-left: 0.5px solid var(--border-color);
   border-bottom: 0.5px solid var(--border-color);
   padding: 20px 24px 20px 24px;
-  width: 370px;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .border {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .border {
+    width: 370px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
