--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,22 +1,39 @@
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: center;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   list-style-type: none;
   cursor: pointer;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 768px;
+  }
 }
 
 .portfolio-list .item {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 30px;
+
+  width: 450px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 60px) / 2);
+    margin-right: 30px;
+
+    max-width: 354px;
+  }
 
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
-    margin-bottom: 30px;
+
+    max-width: 370px;
   }
 }
 
@@ -53,11 +70,15 @@
 }
 
 .portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
+  @media screen and (min-width: 1200px) {
+    margin-right: 0;
+  }
 }
 
 .portfolio-list .title {
@@ -75,5 +96,10 @@
   border-left: 0.5px solid var(--border-color);
   border-bottom: 0.5px solid var(--border-color);
   padding: 20px 24px 20px 24px;
-  width: 370px;
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
