--- a/css/main.css
+++ b/css/main.css
@@ -1400,19 +1400,19 @@ textarea {
 }
 
 .features__item:nth-child(1)::before {
-  background-image: url(/images/icon/antenna.svg);
+  background-image: url(../../images/icon/antenna.svg);
 }
 
 .features__item:nth-child(2)::before {
-  background-image: url(/images/icon/clock.svg);
+  background-image: url(../../images/icon/clock.svg);
 }
 
 .features__item:nth-child(3)::before {
-  background-image: url(/images/icon/diagram.svg);
+  background-image: url(../../images/icon/diagram.svg);
 }
 
 .features__item:nth-child(4)::before {
-  background-image: url(/images/icon/astronaut.svg);
+  background-image: url(../../images/icon/astronaut.svg);
 }
 
 .features__item {
