--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -62,7 +62,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background-image: url(/images/icon/iconsend.svg);
+  background-image: url(../../images/icon/iconsend.svg);
   content: "";
   width: 24px;
   height: 24px;
