--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -46,13 +46,13 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
     max-width: 354px;
   }
 
   @media screen and (min-width: 1200px) {
     // width: calc((100% - 90px) / 4);
-    width: 270px;
+    max-width: 270px;
     margin-right: 15px;
     margin-left: 15px;
     &:nth-child(4n) {
