--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -12,6 +12,7 @@
 
   @media screen and (min-width: 767px) and (max-width: 1199px) {
     width: 768px;
+    justify-content: flex-start;
   }
 }
 
@@ -96,9 +97,7 @@
   border-left: 0.5px solid var(--border-color);
   border-bottom: 0.5px solid var(--border-color);
   padding: 20px 24px 20px 24px;
-  @media screen and (min-width: 767px) and (max-width: 1199px) {
-    width: 354px;
-  }
+
   @media screen and (min-width: 1200px) {
     width: 370px;
   }
