--- a/css/main.css
+++ b/css/main.css
@@ -1760,15 +1760,19 @@ textarea {
 }
 
 .clients__item {
-  margin: 15px 15px 15px 15px;
+  margin-bottom: 15px;
 }
 
-.clients__item:nth-child(odd) {
-  margin-left: 0px;
-}
-
-.clients__item:nth-child(even) {
-  margin-right: 0px;
+@media screen and (min-width: 480px) {
+  .clients__item {
+    margin: 15px 15px 15px 15px;
+  }
+  .clients__item:nth-child(odd) {
+    margin-left: 0px;
+  }
+  .clients__item:nth-child(even) {
+    margin-right: 0px;
+  }
 }
 
 @media screen and (min-width: 768px) {
