--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -62,12 +62,15 @@
 }
 
 .clients__item {
-  margin: 15px 15px 15px 15px;
-  &:nth-child(odd) {
-    margin-left: 0px;
-  }
-  &:nth-child(even) {
-    margin-right: 0px;
+  margin-bottom: 15px;
+  @media screen and (min-width: 480px) {
+    margin: 15px 15px 15px 15px;
+    &:nth-child(odd) {
+      margin-left: 0px;
+    }
+    &:nth-child(even) {
+      margin-right: 0px;
+    }
   }
   @media screen and (min-width: 768px) {
     margin: 0px 0px 0px 0px;
