--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,7 +14,7 @@
   background-size: cover;
   background-color: var(--footer-background-color);
 
-  max-width: 480px;
+  // max-width: 480px;
   height: 400px;
 
   @media screen and (min-device-pixel-ratio: 2),
