--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -10,7 +10,7 @@
 
 .subscribe-block {
   display: block;
-
+  min-width: 100%;
   align-items: center;
   @media screen and (min-width: 1200px) {
     display: inline-flex;
@@ -76,10 +76,13 @@
   border-radius: 4px;
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 450px;
+  width: 100%;
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
   @media screen and (min-width: 1200px) {
     width: 358px;
   }
