--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,6 +6,7 @@
 }
 
 .bottom {
+  width: 480px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -21,15 +22,7 @@
 }
 
 .footer {
-  // display: flex;
-  // flex-direction: column;
-  // flex-wrap: nowrap;
-  // align-content: center;
-  // justify-content: center;
-  // align-items: center;
-  // margin-left: auto;
-  // margin-right: auto;
-  min-width: 450px;
+  // min-width: 450px;
   @media screen and (min-width: 768px) {
     min-width: auto;
   }
