--- a/css/main.css
+++ b/css/main.css
@@ -932,7 +932,7 @@ textarea {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) and (max-width: 1199px) {
   .subscribe input {
     width: 450px;
   }
