--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -80,7 +80,7 @@
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
     width: 450px;
   }
   @media screen and (min-width: 1200px) {
