--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -26,7 +26,7 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((100% - 60px) / 2);
     margin-right: 30px;
-
+    // display: grid;
     max-width: 354px;
   }
 
