--- a/css/main.css
+++ b/css/main.css
@@ -1005,6 +1005,7 @@ textarea {
         -ms-flex-pack: center;
             justify-content: center;
     margin-bottom: 30px;
+    margin-top: -15px;
   }
 }
 
@@ -1180,6 +1181,12 @@ textarea {
           justify-content: space-between;
 }
 
+@media screen and (min-width: 480px) {
+  .container.main-nav {
+    width: 480px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container.main-nav {
     -webkit-box-pack: center;
@@ -1196,6 +1203,7 @@ textarea {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    width: 1200px;
   }
 }
 
@@ -1496,6 +1504,7 @@ textarea {
     padding-left: 15px;
     padding-right: 15px;
     display: block;
+    padding-bottom: 94px;
   }
 }
 
@@ -1588,6 +1597,7 @@ textarea {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: -30px;
   }
 }
 
@@ -1612,11 +1622,19 @@ textarea {
 .staff__title {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .staff__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .staff__item-title {
@@ -1690,14 +1708,28 @@ textarea {
   padding-top: 60px;
 }
 
+@media screen and (min-width: 1200px) {
+  .section.team {
+    padding-top: 94px;
+  }
+}
+
 .clients__title {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 35px;
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .clients__logo {
@@ -1769,9 +1801,16 @@ textarea {
   margin-bottom: 15px;
 }
 
+.clients__item:nth-child(6) {
+  margin-bottom: 0px;
+}
+
 @media screen and (min-width: 480px) {
   .clients__item {
     margin: 15px 15px 15px 15px;
+  }
+  .clients__item:nth-child(5), .clients__item:nth-child(6) {
+    margin-bottom: 0px;
   }
   .clients__item:nth-child(odd) {
     margin-left: 0px;
@@ -1794,9 +1833,15 @@ textarea {
   .clients__item:nth-child(2), .clients__item:nth-child(5) {
     margin: 15px 15px 15px 15px;
   }
+  .clients__item:nth-child(4), .clients__item:nth-child(5), .clients__item:nth-child(6) {
+    margin-bottom: 0px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .clients__item {
+    margin: 15px 15px 0px 15px;
+  }
   .clients__item:nth-child(3), .clients__item:nth-child(4) {
     margin: 15px 15px 15px 15px;
   }
@@ -1840,6 +1885,7 @@ textarea {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    height: 132px;
   }
 }
 
@@ -1978,6 +2024,16 @@ textarea {
 @media screen and (min-width: 1200px) {
   .portfolio-list .item:nth-child(3n) {
     margin-right: 0;
+  }
+}
+
+.portfolio-list .item:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-list .item:last-child {
+    margin-bottom: 0;
   }
 }
 
