--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+    margin-top: -15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
