--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,8 @@
   background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .bottom {
@@ -18,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    height: 132px;
   }
 }
 
