--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,7 +18,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
   @media screen and (min-width: 768px) {
     justify-content: center;
   }
@@ -26,6 +28,7 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
+    width: 1200px;
   }
 }
 
