--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -82,6 +82,14 @@
   }
 }
 
+.portfolio-list .item:last-child {
+  margin-bottom: 0;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+}
+
 .portfolio-list .title {
   color: var(--title-text-color);
   font-weight: 700;
