--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -22,6 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: -30px;
   }
 }
 
@@ -42,11 +43,16 @@
 .staff__title {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .staff__item-title {
@@ -111,5 +117,8 @@
   padding-top: 60px;
 
   @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
   }
 }
