--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -29,10 +29,20 @@
 
 .filter__item {
   margin-right: 8px;
-  margin-top: 0px;
-}
-.filter__:last-child {
-  margin-right: 0px;
+
+  &:last-child {
+    margin-right: 0px;
+  }
+  &:nth-child(4),
+  &:nth-child(5) {
+    margin-top: 15px;
+  }
+  @media screen and (min-width: 768px) {
+    &:nth-child(4),
+    &:nth-child(5) {
+      margin-top: 0;
+    }
+  }
 }
 
 .filter__button {
@@ -60,9 +70,6 @@
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
-// .item .filter-button {
-// }
 
 .filter__button.current {
   color: var(--primary-background-color);
