--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "./components/section";
 @import "./components/container";
 @import "./components/logo";
+@import "./components/btn";
 @import "./components/contacts";
 @import "./components/back-drop";
 @import "./components/contacts-mobile";
